--- a/nanofunds/css/materialize.css
+++ b/nanofunds/css/materialize.css
@@ -5287,7 +5287,7 @@ nav {
     color: #fff;
     display: inline-block;
     font-size: 2.1rem;
-    padding: 0;
+      padding: 10px 0 0 0;
     white-space: nowrap; }
     nav .brand-logo.center {
       left: 50%;
