--- a/nanofunds/css/materialize.css
+++ b/nanofunds/css/materialize.css
@@ -1670,7 +1670,7 @@ body {
  * and Firefox.
  * Correct `block` display not defined for `main` in IE 11.
  */
-article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+article, aside, details, figcaption, figure, footer, header, hgroup, main, /**menu*/, nav, section, summary {
   display: block; }
 
 /**
