--- a/nanofunds/index.cshtml
+++ b/nanofunds/index.cshtml
@@ -1,9 +1,43 @@
 ﻿<!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-    </head>
-    <body>
+<html ng-app="nano">
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" href="/css/materialize.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <title>Nano</title>
 
-    </body>
+</head>
+<body id="Main" ng-controller="indexController">
+    <div id="Menus" ng-include="'/app/nav/nav.html'" ng-controller="navController"></div>
+
+    <div id="View" ng-view>
+    </div>
+
+    <div id="Footer" ng-include="'/app/footer/footer.html'"></div>
+    <script src="/lib/jquery/jquery-2.1.1.min.js"></script>
+    <script src="/lib/materialize/materialize.js"></script>
+
+
+    <script src="/lib/angular/angular.min.js"></script>
+    <script src="lib/angular-materialize/angular-materialize.js"></script>
+    <script src="/lib/angular-route/angular-route.min.js"></script>
+    <script src="/lib/ngCurrency/ng-currency.min.js"></script>
+    <script src="/lib/angular-sanitize/angular-sanitize.min.js"></script>
+    <script src="/lib/moment/moment.min.js"></script>
+    <script src="/lib/ngstorage/ngStorage.min.js"></script>
+
+    <script src="/app/nano.js"></script>
+    <script src="/app/nanoConfig.js"></script>
+
+    <script src="/app/indexController.js"></script>
+
+    <script src="/app/nav/navController.js"></script>
+    <!--
+    <script src="Scripts/app/common/factories/authenticationFactory.js"></script> -->
+    <script src="/app/common/factories/httpInterceptorFactory.js"></script>
+
+
+</body>
 </html>
