--- a/nanofunds/Views/Home/Index.cshtml
+++ b/nanofunds/Views/Home/Index.cshtml
@@ -9,7 +9,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="/css/materialize.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/style.css"/>
+    <link href="~/lib/angular-chart/angular-chart.min.css" rel="stylesheet" />
     <title>Nano</title>
 
 </head>
@@ -18,12 +19,15 @@
     <div id="View" ng-view>
     </div>
 
-    <div id="Footer" ng-include="'/app/footer/footer.html'"></div>
+<div id="Footer" ng-include="'/app/footer/footer.html'"></div>
+
+
     <script src="../../lib/jquery/jquery-2.1.1.min.js"></script>
     <script src="../../lib/materialize/materialize.js"></script>
-
+    <script src="../../lib/chart/Chart.js"></script>
 
     <script src="../../lib/angular/angular.min.js"></script>
+    <script src="../../lib/angular-chart/angular-chart.min.js"></script>
     <script src="../../lib/angular-materialize/angular-materialize.js"></script>
     <script src="../../lib/angular-route/angular-route.min.js"></script>
     <script src="../../lib/ngCurrency/ng-currency.min.js"></script>
@@ -35,12 +39,12 @@
     <script src="../../app/nanoConfig.js"></script>
 
     <script src="../../app/indexController.js"></script>
-
     <script src="../../app/nav/navController.js"></script>
     <!--
     <script src="Scripts/app/common/factories/authenticationFactory.js"></script> -->
-    <script src="../../app/common/factories/httpInterceptorFactory.js"></script>
+<script src="../../app/common/factories/httpInterceptorFactory.js"></script>
 
+    <script src="../../app/dashboard/dashBoardController.js"></script>
 
 </body>
 </html>
