get base dashboard up

--- a/nanofunds/Views/Home/Index.cshtml
+++ b/nanofunds/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
 </head>
 <body id="Main" ng-controller="indexController">
     <div id="Menus" ng-include="'/app/nav/nav.html'" ng-controller="navController"></div>
-    <div id="View" ng-view>
+    <div id="View" class="container" ng-view>
     </div>
 
 <div id="Footer" ng-include="'/app/footer/footer.html'"></div>
