--- a/nanofunds/Views/Home/Index.cshtml
+++ b/nanofunds/Views/Home/Index.cshtml
@@ -36,14 +36,15 @@
 
     <script src="../../app/nano.js"></script>
     <script src="../../app/nanoConfig.js"></script>
-
+    <script src="../../app/common/factories/authenticationFactory.js"></script> 
     <script src="../../app/indexController.js"></script>
     <script src="../../app/nav/navController.js"></script>
-    <!--
-    <script src="Scripts/app/common/factories/authenticationFactory.js"></script> -->
+
     <script src="../../app/common/factories/httpInterceptorFactory.js"></script>
     <script src="../../app/common/factories/restFactory.js"></script>
     <script src="../../app/dashboard/dashBoardController.js"></script>
-    
+    <script>
+    var mId = '@(ViewBag.mId)';
+    </script>
 </body>
 </html>
