--- a/nanofunds/Views/Home/Index.cshtml
+++ b/nanofunds/Views/Home/Index.cshtml
@@ -43,6 +43,7 @@
     <script src="../../app/common/factories/httpInterceptorFactory.js"></script>
     <script src="../../app/common/factories/restFactory.js"></script>
     <script src="../../app/dashboard/dashBoardController.js"></script>
+    <script src="../../app/transactions/transactionsController.js"></script>
     <script>
     var mId = '@(ViewBag.mId)';
     </script>
